homelab-k3s/k3s/apps/trading-journal/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"trading-journal-ingress","namespace":"trading-journal"},"spec":{"rules":[{"host":"trading-journal.local","http":{"paths":[{"backend":{"service":{"name":"trading-backend-service","port":{"number":8080}}},"path":"/api","pathType":"Prefix"},{"backend":{"service":{"name":"trading-frontend-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-06-21T20:49:49Z"
  generation: 5
  name: trading-journal-ingress
  namespace: trading-journal
  resourceVersion: "8074736"
  uid: e032d018-6fa2-43e1-9c52-542762f0cc97
spec:
  ingressClassName: traefik
  rules:
    - host: trading-journal.local
      http:
        paths:
          - backend:
              service:
                name: trading-backend-service
                port:
                  number: 8080
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: trading-frontend-service
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer:
    ingress:
      - ip: 192.168.1.169
      - ip: 192.168.1.207
      - ip: 192.168.1.218
      - ip: 192.168.1.238
