homelab-k3s/k3s/apps/trading-journal/backend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: trading-backend-service
  namespace: trading-journal

spec:
  selector:
    app: trading-backend

  ports:
    - port: 8080
      targetPort: 8080
